--- a/css/style.css
+++ b/css/style.css
@@ -669,11 +669,12 @@ header .header-dashboard {
     display: block;
     margin: auto;
     float: right;
-    text-align: right;
+    text-align: center;
 }
 header .header-dashboard .dashboard {
-     margin-top: 170px;
-    margin-bottom: 0;
+    margin-top: 120px;
+    /*margin-right: 50px;*/
+    margin-bottom: 0px;
 }
 
 header .container {
